--- a/style.css
+++ b/style.css
@@ -22,8 +22,10 @@
     width: 50%;
     display: flex;
     flex-direction: column;
-    border-bottom: 3px solid black;    
+    border-bottom: 3px solid black;   
+    transition: all 0.3s ease-in-out; 
 }
+
 .accordionHeader, .accordionDescription{
     background-color: #eee;
  padding: 16px 12px;
@@ -41,10 +43,11 @@
 }
 
 .accordionDescription{
- border-top: 2px solid black;
+ border-top: 1px solid black;
  display: none;
 }
 
 .accordionContainer.active .accordionDescription{
     display: block;
+
 }
